[package]
name = "dnsled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive", "env"] }
reqwest = "0.11.13"
tokio = { version = "1.23.0", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "sync",
    "time",
] }

[profile.release]
opt-level = "z"
lto = "thin"
debug = false
strip = true
